fixed issue on mobile devices where white line showed up

--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,6 @@ header nav {
   justify-content: flex-end;
   align-items: center;
   color: white;
-  width: 60%;
 }
 
 header nav ul {
